# clothSimulator

./: .gitignore  CLAUDE.md  CLOTH_GRAB_FEATURE.md  CLOTH_SIMULATION_OPTIMIZATION_PLAN.md  README.md  RENDERING_IMPROVEMENTS.md  TODOS.md  build-and-serve-http.bat  build-and-serve.bat  figmatest.7z  index.html  package-lock.json  package.json  vite.config.http.ts  vite.config.ts
Plan/: 팀_커뮤니티_채팅_플랜.md
public/: manifest.json
public/drills/: drill-2on1.json  drill-3on2.json  drill-breakout.json  drill-cycling.json  drill-dump-chase.json  drill-neutral-regroup.json  drill-one-timer.json  drill-pk-box.json  drill-powerplay.json  drill-shootout.json  drill-weave.json  drill.json
public/share/: player.html
scripts/: build-wasm.sh
server/: animationPrompt.ts  chatRoutes.ts  communityRoutes.ts  computeKeyframes.ts  drillPrompt.ts  drillShareRoutes.ts  gameRoutes.ts  hockeyKnowledge.ts  index.ts  matchRoutes.ts  paymentRoutes.ts  promptGuard.ts  teamRoutes.ts  validateAnimation.ts  validateDrill.ts
server/middleware/: auth.ts
server/payments/: paddle.ts  stripe.ts  toss.ts  types.ts
src/: App.tsx  index.css  main.tsx  routes.tsx
src/components/: AIAnimateBar.tsx  AIGenerateDialog.tsx  AnimationTimeline.tsx  DrillEditor.tsx  DrillLibrary.tsx  DrillPropertiesPanel.tsx  DrillToolbar.tsx  ExportDialog.tsx  FilePanel.tsx  ModelViewer.tsx  PlaybackControls.tsx  PropertiesPanel.tsx  ProtectedRoute.tsx  RinkViewer.tsx  SessionBuilder.tsx  SessionPrintView.tsx  StatusBar.tsx
src/components/layout/: BottomNav.tsx  SideNav.tsx
src/context/: AuthContext.tsx  RendererContext.tsx  StorageContext.tsx
src/hooks/: useDrillEditor.ts  useRendererBridge.ts  useSubscription.ts  useWasmModule.ts
src/lib/: aiGenerate.ts  aiUsage.ts  animationSerializer.ts  catmullRom.ts  drillStorage.ts  exportVideo.ts  fileLoader.ts  mergeAnimation.ts  migrateDrills.ts  storage.ts  supabase.ts
src/pages/: AccountPage.tsx  CommunityPage.tsx  DashboardPage.tsx  EditorPage.tsx  GameDetailPage.tsx  GamesPage.tsx  LandingPage.tsx  LoginPage.tsx  MatchesPage.tsx  MessagesPage.tsx  PricingPage.tsx  SignupPage.tsx  StandingsPage.tsx  TeamCreatePage.tsx  TeamJoinPage.tsx  TeamPage.tsx
src/types/: drill.ts  gifenc.d.ts  wasm.d.ts
supabase/migrations/: 001_initial_schema.sql  002_teams_sharing_matching_chat.sql  003_games_scoring_standings.sql
wasm/: CMakeLists.txt
wasm/src/: main.cpp
wasm/src/animation/: DrillAnimator.cpp  DrillAnimator.h
wasm/src/loaders/: FbxLoader.cpp  FbxLoader.h  GltfLoader.cpp  GltfLoader.h  ModelLoader.cpp  ModelLoader.h  ObjLoader.cpp  ObjLoader.h
wasm/src/material/: Material.cpp  Material.h
wasm/src/mesh/: Mesh.cpp  Mesh.h  MeshData.h  TriangleMeshGenerator.cpp  TriangleMeshGenerator.h
wasm/src/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderSources.h
wasm/src/rink/: DrillToken.cpp  DrillToken.h  IceRink.cpp  IceRink.h  PathRenderer.cpp  PathRenderer.h
wasm/src/scene/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Scene.cpp  Scene.h
wasm/src/simulation/: ClothParticle.h  ClothSimulation.cpp  ClothSimulation.h  ClothSpring.h  CollisionBody.h  ComputeShaderSources.h  GpuClothSolver.cpp  GpuClothSolver.h  IClothSolver.h  MeshCollider.cpp  MeshCollider.h  VerletSolver.cpp  VerletSolver.h  XPBDSolver.cpp  XPBDSolver.h
wasm/test/: sim_test.cpp
